# soundslike

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
examples/: 2024-08-04-sound_prob.md  demo.ipynb
examples/POC_nb/: cs109.ipynb
soundslike/: __init__.py  soundslike.py
tests/: test_soundslike.py
